tests/compile-errors/SoANonStruct.hxml
lib.hxml
-cp tests/compile-errors
-main SoANonStruct
-js bin/compile-tests/SoANonStruct.js
